# dolly

./: .gitignore  install-proj.sh  load-env.sh  pyproject.toml  train_dolly.py  train_dolly_subprocess.py
conf/: dolly.yaml
conf/model/: dolly_base_model.yaml
conf/model/base_model/: EleutherAI-gpt-j-6B.yaml  base_automodel.yaml
conf/model/tokenizer/: EleutherAI-gpt-j-6B.yaml  base_autotokenizer.yaml
conf/trainer/: ddp_trainer.yaml
training/: model.py  train.py  trainer.py  utils_old.py
