[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "robogast", email = "robertjan.schlimbach@gmail.com"},
]
dependencies = [
    "accelerate>=0.18.0",
    "click==8.0.3",
    "datasets==2.8.0",
    "transformers[torch]>=4.25.1",
    "watchdog>=2.1.9",
    "pytest-cov>=3.0.0",
    "pytest==7.1.2",
    "deepspeed>=0.8.3",
    "pytorch-lightning>=2.0.1",
    "torch @ https://download.pytorch.org/whl/nightly/cu118/torch-2.1.0.dev20230329%2Bcu118-cp311-cp311-linux_x86_64.whl",
    "pytorch-triton @ https://download.pytorch.org/whl/nightly/pytorch_triton-2.1.0%2B46672772b4-cp311-cp311-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/nightly/cu118/torchvision-0.16.0.dev20230329%2Bcu118-cp311-cp311-linux_x86_64.whl",
    "hydra-core==1.3.2",
]

requires-python = ">=3.11"
license = {text = "Apache License 2.0"}

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/nightly/cu118"
name = "torch"



[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
